--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -7,7 +7,7 @@
 }
 .navbar__menu-item {
   text-transform: uppercase;
-  font-size: 6.5em;
+  font-size: 5.2em;
   padding: 60px 20px;
   font-weight: 700;
   width: 300px;
