--- a/src/components/product-card/product-card.css
+++ b/src/components/product-card/product-card.css
@@ -111,7 +111,7 @@
   height: 0;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 640px) {
   .clash-card {
     margin-right: 0px;
   }
